    + Correctly handle the BTS returning no bugs for a package when --closes
      is used (either because the package doesn't exist in the archive
      or it has no open bugs) (Closes: #477398)
    + Add intrepid (ibex) to the list of Ubuntu distributions
    + Skip auto-NMU detection if -e was used or when editing an UNRELEASED
      changelog and using the "changelog" release heuristic
  * debcheckout: Use the Vcs-* headers from the highest available version
    rather than the first returned by "apt-get source" (Closes: #477386)
  * debcommit: Ignore --confirm and --edit when combined with --diff
  * licensecheck: Correctly detect LGPLv3+ (Closes: #477742)
  * tagpending: Use option bundling (so that e.g. "tagpending -ni" works)
  * transition-check: New script to determine whether a set of source packages
    is involved in a transition for which uploads to unstable are currently
    blocked (Closes: #477922)
  * debian/control:
    + Add transition-check
    + Recommend libyaml-syck-perl (for transition-check)
    + Move build-essential back to Suggests as it's only required by
      dpkg-depcheck and dpkg-genbuilddeps and will be installed in a build
      environment anyway
    + Fix a typo in the Suggests field (svn-buildpacakge)
  * README: Add transition-check

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Mon, 21 Apr 2008 20:06:13 +0100

devscripts (2.10.26) unstable; urgency=low

  [ Adam D. Barratt ]
  * bts: Update documentation for "forwarded" to indicate that it may also
    be used with a URL (for instance, for an upstream bug tracker)
    (Closes: #475896)
  * checkbashisms:
    + Add experimental makefile support (only enabled if -f is used)
    + Modify the "2>&foo" check to allow a valid file descriptor followed
      by a backslash (for line continuations)
    + Check the initial lines of shell script wrappers. Based on a patch from
      Raphael Geissert
    + Fix a couple of the quoted block detection checks so as not to trigger