@@ -27,8 +27,11 @@ devscripts (2.10.27) UNRELEASED; urgency=low
     + Add intrepid (ibex) to the list of Ubuntu distributions
     + Skip auto-NMU detection if -e was used or when editing an UNRELEASED
       changelog and using the "changelog" release heuristic
-  * debcheckout: Use the Vcs-* headers from the highest available version
-    rather than the first returned by "apt-get source" (Closes: #477386)
+  * debcheckout:
+    + Use the Vcs-* headers from the highest available version rather than
+      the first returned by "apt-get source" (Closes: #477386)
+    + Allow the Vcs-* headers from any of the available package versions to
+      be used
   * debcommit: Ignore --confirm and --edit when combined with --diff
   * licensecheck: Correctly detect LGPLv3+ (Closes: #477742)
   * tagpending: Use option bundling (so that e.g. "tagpending -ni" works)
